<resources>

    <string name="app_name">MovieDB</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MovieDB</string>
    <string name="imageview_description">Image</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="runtime">Duration: %1$s minutes</string>
    <string name="votes">%1$s / %2$s votes</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="watchlist">Watchlist</string>
    <string name="trailer_unavailable">Sorry, the trailer for this movie is unavailable</string>
    <string name="log_in">Log in</string>
    <string name="operation_failed">Operation failed: please try again later</string>
    <string name="movies">Movies</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="cancel">Cancel</string>
    <string name="login_dialog_message">You have to log in order to use this feature</string>
    <string name="log_out">Log out</string>
    <string name="login_in_progress">Signing in</string>
    <string name="refresh">Refresh</string>
    <string name="require_session">You have to sign in to view your watchlist</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>

</resources>