<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent">
	    	
    <RelativeLayout 
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content" >
	        
	    <ImageView
	        android:id="@+id/poster"
	        android:layout_width="@dimen/poster_width"
	        android:layout_height="@dimen/poster_height"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="8dp"
	        android:scaleType="fitXY"
	        android:contentDescription="@string/imageview_description" />
	
	    <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@+id/poster"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:layout_toRightOf="@+id/poster"
	        android:text="Title"
	        android:textSize="@dimen/largeTextSize"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/runtime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/title"
	        android:layout_below="@+id/title"
	        android:layout_marginTop="4dp"
	        android:text="@string/runtime"
	        android:textSize="@dimen/smallTextSize" />
	
	    <!-- <RatingBar
	        android:id="@+id/ratingBar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/title"
	        android:layout_below="@+id/runtime"
	        android:layout_marginTop="4dp"
	        android:isIndicator="true"
	        android:numStars="5"
	        style="@style/RatingBar" /> -->
	        
        <ImageView 
            android:id="@+id/ratingImage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/title"
	        android:layout_below="@+id/runtime"
	        android:layout_marginTop="4dp"
	        android:src="@drawable/ic_rating"
	        android:contentDescription="@string/imageview_description"
            />
	
	    <TextView
	        android:id="@+id/votes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="4dp"
	        android:layout_below="@+id/runtime"
	        android:layout_toRightOf="@id/ratingImage"
	        android:layout_alignTop="@id/ratingImage"	        
	        android:text="@string/votes"
	        android:textSize="@dimen/smallTextSize" />    	
	    <TextView
	        android:id="@+id/overviewTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ratingImage"
	        android:layout_below="@+id/ratingImage"
	        android:layout_marginTop="8dp"
	        android:text="Overview"
	        android:textSize="@dimen/mediumTextSize"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/overview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/overviewTxt"
	        android:layout_below="@+id/overviewTxt"
	        android:maxLines="8"
	        android:text="Overview"
	        android:textSize="@dimen/overviewTextSize" />
	
	    <TextView
	        android:id="@+id/castTxt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ratingImage"
	        android:layout_below="@id/overview"
	        android:layout_marginTop="8dp"
	        android:text="Cast"
	        android:textSize="@dimen/mediumTextSize"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/cast"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/castTxt"
	        android:layout_below="@+id/castTxt"	        
	        android:text="Cast"
	        android:textSize="@dimen/overviewTextSize" />	
	    <Button
	        android:id="@+id/trailerBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/cast"
	        android:layout_below="@id/cast"
	        android:layout_marginTop="8dp"
	        android:text="@string/watch_trailer" />
	    
	    <Button
	        android:id="@+id/watchlistBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/trailerBtn"
	        android:layout_alignTop="@id/trailerBtn"
	        android:layout_below="@id/cast"
	        android:layout_marginLeft="8dp"
	        android:text="@string/add_to_watchlist" />
	
	</RelativeLayout>
</ScrollView>